cambio de texto

--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
 </head>
 <body>
     <p>
-        Hi, my name is John Navarrete, i have more than 4 year as software developer, becouse I was the first person to get started
-        this is my first time working as software developer.
-        do you have any questions?
-        i would like to hear more information about you.
-        for example, where is your from?
-        where do yo meet the working   
+        Hola amigos y amigas este es mi primera carga en github.com
     </p>
 </body>
 </html>
